Fix select spacing in custom field create form
[MAILPOET-2463]

--- a/assets/css/src/components/formEditor/components/_custom_field.scss
+++ b/assets/css/src/components/formEditor/components/_custom_field.scss
@@ -5,7 +5,8 @@
   }
 }
 
-.edit-post-visual-editor .mailpoet_custom_date {
+.edit-post-visual-editor .mailpoet_custom_date,
+.edit-post-visual-editor .mailpoet_custom_field_add_form {
   select {
     padding: 0 24px 0 8px;
   }
